Step 4 add install rule
To keep :

Install rules are really easy

you can install stuff directly using a prefix :

cmake ../Step4
cmake --build .
mkdir install/
cmake --install . --prefix install/

Step4_build$ tree install
install
├── bin
│   └── Tutorial
├── include
│   ├── MathFunctions.h
│   └── TutorialConfig.h
└── lib
    └── libMathFunctions.a

--- a/Step4/CMakeLists.txt
+++ b/Step4/CMakeLists.txt
@@ -30,3 +30,6 @@ target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
 target_include_directories(Tutorial PUBLIC
                            "${PROJECT_BINARY_DIR}"
                            )
+
+install(TARGETS Tutorial DESTINATION bin)
+install(FILES "${PROJECT_BINARY_DIR}/TutorialConfig.h" DESTINATION include)
