Step 4 add simple cmake test, bc why not?

--- a/Step4/CMakeLists.txt
+++ b/Step4/CMakeLists.txt
@@ -33,3 +33,34 @@ target_include_directories(Tutorial PUBLIC
 
 install(TARGETS Tutorial DESTINATION bin)
 install(FILES "${PROJECT_BINARY_DIR}/TutorialConfig.h" DESTINATION include)
+
+## Let's test things out
+
+enable_testing()
+
+# Test 1 : does the application run, basically do ./Tutorial 25
+add_test(NAME Runs COMMAND Tutorial 25)
+
+# Test2 : does the usage message work? basically do ./Tutorial
+add_test(NAME Usage COMMAND Tutorial)
+# Compare the output with a Regex
+set_tests_properties(Usage
+  PROPERTIES PASS_REGULAR_EXPRESSION "Usage:.*number"
+  )
+
+# define a function to simplify adding tests
+function(do_test target arg result)
+  add_test(NAME Comp${arg} COMMAND ${target} ${arg})
+  set_tests_properties(Comp${arg}
+    PROPERTIES PASS_REGULAR_EXPRESSION ${result}
+    )
+endfunction(do_test)
+
+# do a bunch of result based tests
+do_test(Tutorial 4 "4 is 2")
+do_test(Tutorial 9 "9 is 3")
+do_test(Tutorial 5 "5 is 2.236")
+do_test(Tutorial 7 "7 is 2.645")
+do_test(Tutorial 25 "25 is 5")
+do_test(Tutorial -25 "-25 is [-nan|nan|0]")
+do_test(Tutorial 0.0001 "0.0001 is 0.01")
