--- a/Step6/MathFunctions/CMakeLists.txt
+++ b/Step6/MathFunctions/CMakeLists.txt
@@ -12,16 +12,14 @@ configure_file(MathFunctions.h.in MathFunctions.h @ONLY)
 
 add_library(MathFunctions mysqrt.cxx ${CMAKE_CURRENT_BINARY_DIR}/Table.h)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
 # state that anybody linking to us needs to include the current source dir
 # to find MathFunctions.h, while we don't.
 target_include_directories(MathFunctions
           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
           PUBLIC ${CMAKE_CURRENT_BINARY_DIR}
-          PUBLIC "${PROJECT_BINARY_DIR}"
           )
 
 # install rules
 install(TARGETS MathFunctions DESTINATION lib)
-install(FILES MathFunctions.h DESTINATION include)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/MathFunctions.h DESTINATION include)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/Table.h DESTINATION include)
