Step 10 use and propagate compiler options
To take :
You can basically define some compiler rules as so :

add_library(tutorial_compiler_flags INTERFACE)

from documentation:
https://cmake.org/cmake/help/latest/command/add_library.html?highlight=add_library#interface-libraries
an INTERFACE library target does not compile sources and does not produce a library artifact on disk. However, it may have properties set on it and it may be installed and exported.

then you can add options to the interface library as so :
target_compile_options(tutorial_compiler_flags INTERFACE
  "$<${gcc_like_cxx}:$<BUILD_INTERFACE:-Wall;-Wextra;-Wshadow;-Wformat=2;-Wunused>>"
  "$<${msvc_cxx}:$<BUILD_INTERFACE:-W3>>"
)

and propagate them as so :
target_link_libraries(MakeTable PRIVATE tutorial_compiler_flags)

--- a/Step10/MathFunctions/CMakeLists.txt
+++ b/Step10/MathFunctions/CMakeLists.txt
@@ -16,6 +16,8 @@ if(USE_MYMATH)
   # first we add the executable that generates the table
   add_executable(MakeTable MakeTable.cxx)
 
+  target_link_libraries(MakeTable PRIVATE tutorial_compiler_flags)
+
   # add the command to generate the source code
   add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/Table.h
@@ -39,8 +41,11 @@ if(USE_MYMATH)
                         POSITION_INDEPENDENT_CODE ${BUILD_SHARED_LIBS}
                         )
 
+  target_link_libraries(SqrtLibrary PUBLIC tutorial_compiler_flags)
   target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
 endif()
+
+target_link_libraries(MathFunctions PUBLIC tutorial_compiler_flags)
 
 # define the symbol stating we are using the declspec(dllexport) when
 # building on windows
