--- a/Step11/MathFunctions/CMakeLists.txt
+++ b/Step11/MathFunctions/CMakeLists.txt
@@ -4,7 +4,9 @@ add_library(MathFunctions MathFunctions.cxx)
 # state that anybody linking to us needs to include the current source dir
 # to find MathFunctions.h, while we don't.
 target_include_directories(MathFunctions
-                           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+                           INTERFACE
+                           $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+                           $<INSTALL_INTERFACE:include>
                            )
 
 # should we use our own math functions
@@ -55,5 +57,6 @@ set(installable_libs MathFunctions tutorial_compiler_flags)
 if(TARGET SqrtLibrary)
   list(APPEND installable_libs SqrtLibrary)
 endif()
-install(TARGETS ${installable_libs} DESTINATION lib)
+install(TARGETS ${installable_libs} DESTINATION lib
+       EXPORT MathFunctionsTargets)
 install(FILES MathFunctions.h DESTINATION include)
